tests/rename/should_compile/rn054.hs

module Rn054 where

import Data.Bits (shiftL)

