tests/rename/should_fail/T19843i.hs
module T19843i where

import Data.Monoid as M (getAll)

x = M.getSum
